--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav class="same-line">
         <div class="topnav left">
-            <a href="#home">YOUR NAME</a>
+            <a href="#home">Joseph Yi</a>
         </div>
         <div class="topnav right">
             <a href="#home">Home</a>
@@ -26,11 +26,11 @@
     <section id="home">
 
         <div class="same-line-panel">
-            <img id="image" src=profile.png>
+            <img id="image" src=Profile.JPG>
             <div class="center">
-                <h1>YOUR NAME</h1>
+                <h1>Joseph Yi</h1>
                 <h2>Undergraduate Student</h2>
-                <h3>Majors, Minors</h3>
+                <h3>Computer Science Major, Statistics and Business Analytics Minors</h3>
             </div>
 
         </div>
@@ -42,7 +42,10 @@
         <div class="same-line-panel reveal">
             <img id="logo" src=logo.png>
             <div class="panel">
-                <p>Put your Bio Here</p>
+                <p>Hi, my name is Joseph Yi and I am an junior at the University
+                     of Maryland College Park studying Computer science. 
+                     This summer I will be interning at Capital One as a 
+                     software engineering intern</p>
             </div>
 
         </div>
@@ -52,16 +55,23 @@
             <h1 class="section-header">Projects</h1>
             <div class="row">
                 <div class="column reveal" style="background-color:#A4969B;">
-                    <h2>Project 1 Title</h2>
-                    <p>Description of Project 1...</p>
+                    <h2>Conway's Game of Life</h2>
+                    <p>I created a GUI version of the popular Conway's Game of Life Algorithm. 
+                        It mimics the algorithm and displays various tyles as "plants" and empty</p>
                 </div>
                 <div class="column reveal" style="background-color:#BFB5B9;">
-                    <h2>Project 2 Title</h2>
-                    <p>Description of Project 2...</p>
+                    <h2>Agricultural Data Analysis Project</h2>
+                    <p>Gathered data from the US Department of Agriculture on over 50 years of data on Precipitation, 
+                        TFP, and Corn Yield. Utilize Python and the panda library to determine trends in data and create 
+                        linear regression models. Utilized the tidyverse and ggplot packages in R to create numerous graphs 
+                        to represent the data</p>
                 </div>
                 <div class="column reveal" style="background-color:#D1CACD;">
-                    <h2>Project 3 Title</h2>
-                    <p>Description of Project 3...</p>
+                    <h2>Tic-Tac-Toe GUI</h2>
+                    <p>Developed a multiplayer version of TikTacToe in java, enabling 
+                        users to connecct via server. This allowed threads to handle each users 
+                        iputs and simultaneously update boards.
+                    </p>
                 </div>
             </div>
         </div>
@@ -69,14 +79,18 @@
 </body>
 <footer>
     <div class="leftFooter">
-        YOUREMAIL@EMAIL.COM
+        jyi12349@terpmail.umd.edu
     </div>
     <div class="rightFooter">
-        <a href="https://www.google.com/" class="fa fa-github" style="font-size:36px"></a>
+        <a href="https://github.com/JosephYi29" class="fa fa-github" style="font-size:36px"></a>
 
     </div>
     <div class="rightFooterr">
-        <a href="https://www.google.com/" class="fa fa-linkedin" style="font-size:36px"></a>
+        <a href="https://www.linkedin.com/in/joseph-yi-424156223/" class="fa fa-linkedin" style="font-size:36px"></a>
+
+    </div>
+    <div class="rightFooterr">
+        <a href="https://www.instagram.com/joseph.yi_/" class="fa fa-instagram" style="font-size:36px"></a>
 
     </div>
 </footer>
